--- a/src/styles/Header/Header.css
+++ b/src/styles/Header/Header.css
@@ -105,7 +105,7 @@
 
 @media screen and (max-width: 780px) {
   .welcome-box, h6, ul, button {
-    width: 12vw;
+    width: 16vw;
     font-size: 9px;
   }
   .welcome-box .logout-button, h6 .logout-button, ul .logout-button, button .logout-button {
@@ -120,7 +120,7 @@
 
 @media screen and (max-width: 680px) {
   .welcome-box, h6, ul, button {
-    width: 10vw;
+    width: 15vw;
     font-size: 8px;
   }
   .welcome-box .logout-button, h6 .logout-button, ul .logout-button, button .logout-button {
@@ -130,9 +130,9 @@
   }
 }
 
-@media screen and (max-width: 560px) {
+@media screen and (max-width: 625px) {
   .welcome-box, h6, ul, button {
-    width: 9vw;
+    width: 15vw;
     font-size: 7px;
   }
   .welcome-box .logout-button, h6 .logout-button, ul .logout-button, button .logout-button {
@@ -142,10 +142,10 @@
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 545px) {
   .welcome-box, h6, ul, button {
-    width: 8.5vw;
-    font-size: 6.5px;
+    width: 20vw;
+    font-size: 7px;
   }
   .welcome-box .logout-button, h6 .logout-button, ul .logout-button, button .logout-button {
     width: 33px;
@@ -154,10 +154,10 @@
   }
 }
 
-@media screen and (max-width: 460px) {
+@media screen and (max-width: 490px) {
   .welcome-box, h6, ul, button {
-    width: 7.5vw;
-    font-size: 5.5px;
+    width: 22vw;
+    font-size: 6.5px;
   }
   .welcome-box .logout-button, h6 .logout-button, ul .logout-button, button .logout-button {
     width: 32px;
@@ -166,10 +166,21 @@
   }
 }
 
-@media screen and (max-width: 420px) {
-  .nav-container h1 {
-    font-size: 30px;
+@media screen and (max-width: 460px) {
+  .welcome-box, h6, ul, button {
+    font-size: 6.25px;
   }
+  .welcome-box .logout-button, h6 .logout-button, ul .logout-button, button .logout-button {
+    width: 32px;
+    height: 13px;
+    font-size: 5px;
+  }
+  .welcome-box h6 {
+    width: 20vw;
+  }
+}
+
+@media screen and (max-width: 425px) {
   .welcome-box, h6, ul, button {
     width: 10px;
     font-size: 5.5px;
@@ -178,6 +189,12 @@
     width: 30px;
     height: 8px;
     font-size: 4px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .nav-container h1 {
+    font-size: 30px;
   }
 }
 
