--- a/src/styles/HomePage/HomePage.scss
+++ b/src/styles/HomePage/HomePage.scss
@@ -55,4 +55,7 @@ h2:hover {
     #homepage-title {
         font-size: 30px;
     };
+    div.category-name h2 {
+        font-size: 20px;
+    };
 };
