--- a/src/styles/HomePage/HomePage.css
+++ b/src/styles/HomePage/HomePage.css
@@ -84,5 +84,8 @@ h2:hover {
   #homepage-title {
     font-size: 30px;
   }
+  div.category-name h2 {
+    font-size: 20px;
+  }
 }
 /*# sourceMappingURL=HomePage.css.map */
