--- a/src/styles/Utilities/Utilities.scss
+++ b/src/styles/Utilities/Utilities.scss
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+};
 
 @mixin login-buttons {
     width: 100px;
@@ -46,7 +46,7 @@
     font-weight: bolder;
     font-size: 25px;
     box-shadow: 0 0 10px rgba(0,0,0,0.8);
-}
+};
 
 $web-font: 'Exo', sans-serif;
 $title-size: 40px;
