--- a/src/styles/GuestLanding/GuestLanding.css
+++ b/src/styles/GuestLanding/GuestLanding.css
@@ -51,10 +51,11 @@
   width: 20vw;
   height: 40vh;
   padding: 50px;
-  background: whitesmoke;
   opacity: 0.95;
+  text-align: center;
   font-weight: bolder;
   font-size: 22px;
+  background: whitesmoke;
   -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
           box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
 }
@@ -79,9 +80,9 @@
   font-family: "Exo", sans-serif;
 }
 
-.main-guestLanding p {
+.main-guestLanding #existing-user-p, .main-guestLanding #new-user-p, .main-guestLanding #number-format {
   font-size: 15px;
-  text-align: center;
+  text-decoration: underline;
 }
 
 .main-guestLanding button {
@@ -124,6 +125,9 @@
   .main-guestLanding, h4, p, label {
     font-size: 15px;
   }
+  #existing-user-p, .main-guestLanding #new-user-p, .main-guestLanding #number-format {
+    font-size: 13px;
+  }
 }
 
 @media screen and (max-width: 780px) {
@@ -134,6 +138,9 @@
     width: 85px;
     height: 18px;
     font-size: 13px;
+  }
+  .main-guestLanding #existing-user-p, .main-guestLanding #new-user-p, .main-guestLanding #number-format, h4 #existing-user-p, h4 .main-guestLanding #new-user-p, .main-guestLanding h4 #new-user-p, h4 .main-guestLanding #number-format, .main-guestLanding h4 #number-format, p #existing-user-p, p .main-guestLanding #new-user-p, .main-guestLanding p #new-user-p, p .main-guestLanding #number-format, .main-guestLanding p #number-format, label #existing-user-p, label .main-guestLanding #new-user-p, .main-guestLanding label #new-user-p, label .main-guestLanding #number-format, .main-guestLanding label #number-format {
+    font-size: 10px;
   }
 }
 
@@ -151,7 +158,7 @@
     width: 40vw;
     height: 28vh;
   }
-  .main-guestLanding form p, .main-guestLanding .existing-user p, .main-guestLanding .new-user p, .main-guestLanding .new-user p {
+  .main-guestLanding form #existing-user-p, .main-guestLanding form #new-user-p, .main-guestLanding form #number-format, .main-guestLanding .existing-user #existing-user-p, .main-guestLanding .new-user #existing-user-p, .main-guestLanding .existing-user #new-user-p, .main-guestLanding .new-user #new-user-p, .main-guestLanding .existing-user #number-format, .main-guestLanding .new-user #number-format, .main-guestLanding .new-user #existing-user-p, .main-guestLanding .new-user #new-user-p, .main-guestLanding .new-user #number-format {
     font-size: 10px;
   }
   .main-guestLanding form button, .main-guestLanding .existing-user button, .main-guestLanding .new-user button, .main-guestLanding .new-user button {
