--- a/src/styles/GuestLanding/GuestLanding.scss
+++ b/src/styles/GuestLanding/GuestLanding.scss
@@ -21,19 +21,26 @@
         width: 20vw;
         height: 40vh;
         padding: 50px;
-        background: $whitesmoke;
         opacity: 0.95;
+        text-align: center;
         font-weight: bolder;
         font-size: $label-size;
+        background: $whitesmoke;
         box-shadow: 0 0 10px rgba(0,0,0,0.8);
             input::placeholder {
                 color: $ebony;
                 font-family: $web-font;
             };
     };
-        p {
-            font-size: $nav-size;
-            text-align: center;
+        #existing-user-p {
+            font-size: 15px;
+            text-decoration: underline;
+        };
+        #new-user-p {
+            @extend #existing-user-p;
+        };
+        #number-format {
+            @extend #existing-user-p;
         };
         button {
             @include login-buttons;
@@ -57,6 +64,9 @@
     .main-guestLanding, h4, p, label {
         font-size: 15px;
     };
+    #existing-user-p {
+        font-size: 13px;
+    };
 };
 
 @media screen and (max-width: 780px) {
@@ -66,6 +76,9 @@
             width: 85px;
             height: 18px;
             font-size: 13px;
+        };
+        #existing-user-p {
+            font-size: 10px;
         };
     };
 };
@@ -77,7 +90,7 @@
         form, .existing-user, .new-user {
             width: 40vw;
             height: 28vh;
-            p {
+            #existing-user-p {
                 font-size: 10px;
             };
             button {
