need to fix the edit file feature

--- a/src/styles/AddService/AddService.scss
+++ b/src/styles/AddService/AddService.scss
@@ -18,10 +18,6 @@
     color: $whitesmoke;
 };
 
-// #progress {
-
-// }
-
 .category {
     width: 20vw;
     height: 20vh;
@@ -45,11 +41,11 @@
 
 .service-description {
     width: 20vw;
-    height: 20vh;
+    height: 30vh;
     color: $ebony;
     text-align: center;
     font-weight: bolder;
-    margin-bottom: 120px;
+    margin-bottom: 50px;
     @include column-box;
     @include box-background;
         label {
@@ -65,10 +61,74 @@
                 };
 };
 
+.upload-feature, p, progress {
+    @include column-box;
+    font-size: $nav-size;
+    justify-content: center;
+    text-align: center;
+        label {
+            @extend .upload-feature;
+        };
+        input {
+            width: 12vw;
+            outline: none;
+            justify-content: center;
+        };
+};
+
+
+@media screen and (max-width: 1200px) {
+    .upload-feature input {
+        width: 17vw;
+    };
+};
+
+@media screen and (max-width: 1080px) {
+    .upload-feature input {
+        width: 17vw;
+    };
+    div.service-description button {
+        width: 80px;
+        height: 25px;
+        font-size: 14px;
+    };
+};
+
+@media screen and (max-width: 921px) {
+    .upload-feature input {
+        width: 18vw;
+    };
+    div.service-description button {
+        width: 75px;
+        height: 23px;
+        font-size: 13px;
+    };
+};
+
+@media screen and (max-width: 870px) {
+    .upload-feature input {
+        width: 20.5vw;
+    };
+};
 
 @media screen and (max-width: 800px) {
     .service-description textarea {
         resize: horizontal; max-width: 215px;
+    };
+    .upload-feature input {
+        width: 22vw;
+    };
+};
+
+@media screen and (max-width: 715px) {
+    .upload-feature input {
+        width: 24vw;
+    };
+};
+
+@media screen and (max-width: 670px) {
+    .upload-feature input {
+        width: 26.5vw;
     };
 };
 
@@ -80,17 +140,41 @@
     };
     .service-description, .service-description-title {
         width: 40vw;
-        height: 15vh;
+        height: 25vh;
         font-size: 30px;
+            button {
+                width: 80px;
+                height: 20px;
+                font-size: 12px;
+            };
     };
     .service-description textarea {
         resize: horizontal; max-width: 200px;
+        resize: vertical; max-height: 35px;
+    };
+    .upload-feature input {
+        width: 29vw;
+    };
+};
+
+@media screen and (max-width: 540px) {
+    .upload-feature input {
+        width: 32vw;
     };
 };
 
 @media screen and (max-width: 495px) {
     label.category-title, label.service-description-title {
         font-size: 18px;
+    };
+    .upload-feature input {
+        width: 35vw;
+    };
+};
+
+@media screen and (max-width: 450px) {
+    .upload-feature input {
+        width: 38vw;
     };
 };
 
@@ -100,5 +184,19 @@
     };
     label.category-title, label.service-description-title {
         font-size: 17px;
+    };
+    .upload-feature input {
+        width: 41vw;
+    };
+};
+
+@media screen and (max-width: 385px) {
+    .service-description, .service-description-title {
+        width: 40vw;
+        height: 30vh;
+        font-size: 30px;
+    };
+    .upload-feature input {
+        width: 45vw;
     };
 };
