--- a/src/styles/EditCheck/EditCheck.scss
+++ b/src/styles/EditCheck/EditCheck.scss
@@ -41,16 +41,14 @@
 //     animation-timing-function: linear;
 // };
 
-//pulse
-// .name-and-link a:hover {
-//     animation: pulse 1s infinite;
-//     animation-timing-function: linear;
-// };
+// pulse
+.name-and-link a:hover {
+    animation: pulse 1s infinite;
+    animation-timing-function: linear;
+};
 
 .pdf-img {
     text-decoration: none;
-    animation: pulse 1s infinite;
-    animation-timing-function: linear;
 };
 
 .editFalse-info {
@@ -133,7 +131,7 @@
 //pulse
 @keyframes pulse {
     0% { transform: scale(1)};
-    50% { transform: scale(1.5)};
+    50% { transform: scale(1.25)};
     100% { transform: scale(1)};
 };
 
