--- a/src/styles/Header/Header.scss
+++ b/src/styles/Header/Header.scss
@@ -8,6 +8,9 @@
     background: $header-gray;
     font-family: $web-font;
     font-size: $title-size;
+    #permian {
+        color: $ebony;
+    };
     .logout-button {
         @include login-buttons;
         
@@ -33,6 +36,7 @@
                 .home-route:hover {
                     font-size: 20px;
                     text-decoration: underline;
+                    text-shadow: 0px 0px 5px $white;
                 };
                 .addService-route:hover {
                     @extend .home-route, :hover;
@@ -42,7 +46,7 @@
         @include button-hover;
         outline: none;
         background: $logout;
-        text-shadow: 0px 0px 10px $header-gray;
+        text-shadow: 0px 0px 10px $white;
     };
 };
 
@@ -56,6 +60,9 @@
                 width: 55px;
                 font-size: 10px;
         };
+        li {
+            pointer-events: none;
+        };
     };
 };
 
@@ -67,9 +74,6 @@
             width: 40px;
             height: 18px;
             font-size: 7px;
-        };
-        li {
-            pointer-events: none;
         };
     };
 };
