website has been touched up with responsiveness and overall style

--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
-	background: white;
+	background: #8C8C8C;
 }
 ol, ul {
 	list-style: none;
