--- a/src/styles/AddService/AddService.scss
+++ b/src/styles/AddService/AddService.scss
@@ -11,8 +11,7 @@
 };
 
 .addService-title {
-    height: 10vh;
-    margin-top: 20px;
+    margin-top: 100px;
     margin-bottom: 10px;
     font-size: $title-size;
     color: $whitesmoke;
@@ -96,6 +95,11 @@
     .upload-feature input {
         width: 17vw;
     };
+    .category, .category-title {
+        width: 20vw;
+        height: 10vh;
+        font-size: 30px;
+    };
 };
 
 @media screen and (max-width: 1080px) {
@@ -155,7 +159,7 @@
     };
     .service-description, .service-description-title {
         width: 40vw;
-        height: 25vh;
+        height: 27vh;
         font-size: 30px;
             button {
                 width: 80px;
@@ -206,9 +210,11 @@
 };
 
 @media screen and (max-width: 385px) {
+    .background-addService {
+        margin-top: 20px;
+    };
     .service-description, .service-description-title {
         width: 40vw;
-        height: 30vh;
         font-size: 30px;
     };
     .upload-feature input {
