--- a/src/styles/GuestLanding/GuestLanding.scss
+++ b/src/styles/GuestLanding/GuestLanding.scss
@@ -5,6 +5,7 @@
     justify-content: space-evenly;
     width: 100vw;
     height: 90vh;
+    margin-top: 79px;
     font-family: $web-font;
     background: url("https://images.unsplash.com/photo-1562237553-36ad661d6f2c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60");
     background-size: 100% 100%;
@@ -16,17 +17,12 @@
         align-items: center;
     };
     form {
+        @include box-background;
         flex-direction: column;
-        border: 1px solid transparent;
         width: 20vw;
         height: 40vh;
-        padding: 50px;
-        opacity: 0.95;
         text-align: center;
-        font-weight: bolder;
         font-size: $label-size;
-        background: $whitesmoke;
-        box-shadow: 0 0 10px rgba(0,0,0,0.8);
             input::placeholder {
                 color: $ebony;
                 font-family: $web-font;
@@ -61,6 +57,9 @@
 
 
 @media screen and (max-width: 1080px) {
+    main.main-guestLanding {
+        margin-top: 65px;
+    };
     .main-guestLanding, h4, p, label {
         font-size: 15px;
     };
