--- a/src/styles/Utilities/Utilities.scss
+++ b/src/styles/Utilities/Utilities.scss
@@ -21,12 +21,13 @@
     width: 100px;
     height: 30px;
     border-radius: 7px;
-    color: $white;
+    color: $platinum;
     font-weight: bold;
     font-size: $nav-size;
     font-family: $web-font;
     background: $ebony;
     outline: none;
+    border: none;
 };
 
 @mixin button-hover {
@@ -40,7 +41,8 @@
     border: 1px solid transparent;
     padding: 50px;
     color: $ebony;
-    background: $whitesmoke;
+    background: $header-gray;
+    background: $platinum;
     opacity: 0.95;
     font-weight: bolder;
     font-size: 25px;
@@ -54,6 +56,7 @@ $label-size: 22px;
 $header-gray: #8C8C8C;
 $white: white;
 $whitesmoke: whitesmoke;
+$platinum: #F2EEEC;
 $ebony: #0A0708;
 $lightEbony: #2E2D29;
 $logout: #C62828;
