--- a/src/styles/AddService/AddService.scss
+++ b/src/styles/AddService/AddService.scss
@@ -157,9 +157,11 @@
         height: 15vh;
         font-size: 30px;
     };
+    .service-description {
+        height: 35vh;
+    };
     .service-description, .service-description-title {
         width: 40vw;
-        height: 27vh;
         font-size: 30px;
             button {
                 width: 80px;
