--- a/src/styles/AddService/AddService.scss
+++ b/src/styles/AddService/AddService.scss
@@ -213,7 +213,7 @@
 
 @media screen and (max-width: 385px) {
     .background-addService {
-        margin-top: 20px;
+        // margin-top: 20px;
     };
     .service-description, .service-description-title {
         width: 40vw;
