--- a/src/styles/AddService/AddService.scss
+++ b/src/styles/AddService/AddService.scss
@@ -215,7 +215,12 @@
     .background-addService {
         // margin-top: 20px;
     };
-    .service-description, .service-description-title {
+    div.service-description {
+        width: 40vw;
+        height: 50vh;
+        font-size: 30px;
+    };
+    .service-description-title {
         width: 40vw;
         font-size: 30px;
     };
