--- a/src/styles/GuestLanding/GuestLanding.scss
+++ b/src/styles/GuestLanding/GuestLanding.scss
@@ -88,7 +88,7 @@
         justify-content: center;
         height: 100%;
         background: $ebony;
-        form, .existing-user, .new-user {
+        form, .existing-user {
             width: 40vw;
             height: 35vh;
             #existing-user-p {
@@ -99,6 +99,10 @@
                 height: 25px;
                 font-size: 10px;
             };
+        };
+        form, .new-user {
+            width: 40vw;
+            height: 50vh;
         };
     };
 };
