--- a/src/styles/GuestLanding/GuestLanding.scss
+++ b/src/styles/GuestLanding/GuestLanding.scss
@@ -94,15 +94,15 @@
             #existing-user-p {
                 font-size: 10px;
             };
-            button {
-                width: 60px;
-                height: 25px;
+            form button {
+                width: 70px;
+                height: 30px;
                 font-size: 10px;
             };
         };
         form, .new-user {
             width: 40vw;
-            height: 50vh;
+            height: 70vh;
         };
     };
 };
