--- a/src/styles/GuestLanding/GuestLanding.scss
+++ b/src/styles/GuestLanding/GuestLanding.scss
@@ -4,7 +4,7 @@
     @include login-section;
     justify-content: space-evenly;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     // margin-top: 79px;
     font-family: $web-font;
     background: url("https://images.unsplash.com/photo-1562237553-36ad661d6f2c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60");
