added UI style fixes

--- a/src/styles/GuestLanding/GuestLanding.scss
+++ b/src/styles/GuestLanding/GuestLanding.scss
@@ -90,6 +90,7 @@
         form, .existing-user {
             width: 40vw;
             height: 20vh;
+            margin-top: 50px;
             #existing-user-p {
                 font-size: 10px;
             };
