--- a/src/styles/GuestLanding/GuestLanding.scss
+++ b/src/styles/GuestLanding/GuestLanding.scss
@@ -91,6 +91,7 @@
             width: 40vw;
             height: 20vh;
             margin-top: 50px;
+            margin-bottom: 50px;
             #existing-user-p {
                 font-size: 10px;
             };
