added UI style fixes

--- a/src/styles/GuestLanding/GuestLanding.scss
+++ b/src/styles/GuestLanding/GuestLanding.scss
@@ -90,8 +90,8 @@
         form, .existing-user {
             width: 40vw;
             height: 35vh;
-            margin-top: 50px;
-            margin-bottom: 50px;
+            margin-top: 100px;
+            // margin-bottom: 50px;
             #existing-user-p {
                 font-size: 10px;
             };
@@ -103,7 +103,8 @@
         };
         form, .new-user {
             width: 40vw;
-            height: 40vh;
+            height: 65vh;
+            margin-top: 100px;
         };
     };
 };
