--- a/src/styles/GuestLanding/GuestLanding.scss
+++ b/src/styles/GuestLanding/GuestLanding.scss
@@ -91,7 +91,7 @@
             width: 40vw;
             height: 35vh;
             margin-top: 100px;
-            // margin-bottom: 50px;
+            margin-bottom: 50px;
             #existing-user-p {
                 font-size: 10px;
             };
@@ -105,6 +105,7 @@
             width: 40vw;
             height: 65vh;
             margin-top: 100px;
+            margin-bottom: 50px;
         };
     };
 };
