added UI style fixes

--- a/src/styles/GuestLanding/GuestLanding.scss
+++ b/src/styles/GuestLanding/GuestLanding.scss
@@ -90,8 +90,8 @@
         form, .existing-user {
             width: 40vw;
             height: 35vh;
-            margin-top: 50px;
-            margin-bottom: 50px;
+            // margin-top: 50px;
+            // margin-bottom: 50px;
             #existing-user-p {
                 font-size: 10px;
             };
@@ -105,7 +105,7 @@
             width: 40vw;
             height: 65vh;
             margin-top: 50px;
-            margin-bottom: 50px;
+            // margin-bottom: 50px;
         };
     };
 };
