added UI style fixes

--- a/src/index.css
+++ b/src/index.css
@@ -22,34 +22,28 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
-};
+}
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
-};
+}
 body {
 	line-height: 1;
-	background: #8C8C8C;
-};
+	background: #0A0708;
+}
 ol, ul {
 	list-style: none;
-};
+}
 blockquote, q {
 	quotes: none;
-};
+}
 blockquote:before, blockquote:after,
 q:before, q:after {
 	content: '';
 	content: none;
-};
+}
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
-};
-
-@media screen and (max-width: 420px) {
-	body {
-		background: #0A0708;
-	};
-};
+}
