--- a/src/styles/GuestLanding/GuestLanding.scss
+++ b/src/styles/GuestLanding/GuestLanding.scss
@@ -90,7 +90,7 @@
         form, .existing-user {
             width: 40vw;
             height: 35vh;
-            // margin-top: 50px;
+            margin-top: 50px;
             // margin-bottom: 50px;
             #existing-user-p {
                 font-size: 10px;
