--- a/src/styles/GuestLanding/GuestLanding.scss
+++ b/src/styles/GuestLanding/GuestLanding.scss
@@ -74,13 +74,16 @@
 };
 
 @media screen and (max-width: 780px) {
-    .main-guestLanding button {
-        width: 85px;
-        height: 20px;
-        font-size: 13px;
-    };
-    #existing-user-p {
-        font-size: 10px;
+    .main-guestLanding, h4, p, label {
+        font-size: 12px;
+        form button {
+            width: 85px;
+            height: 20px;
+            font-size: 13px;
+        };
+        #existing-user-p {
+            font-size: 10px;
+        };
     };
 };
 
@@ -92,9 +95,9 @@
 
 @media screen and (max-width: 420px) {
     .main-guestLanding {
-        height: 100%;
         flex-direction: column;
         justify-content: center;
+        height: 100%;
         background: $ebony;
         form, .existing-user {
             width: 40vw;
