--- a/src/styles/UserProfilePage/UserProfilePage.scss
+++ b/src/styles/UserProfilePage/UserProfilePage.scss
@@ -55,3 +55,17 @@
         font-size: 25px;
     };
 };
+
+
+
+// @media screen and (max-width: 768px) {
+//     .main-guestLanding, h4, p, label {
+//         font-size: 15px;
+//     };
+// };
+
+// @media screen and (max-width: 1024px) {
+//     .main-guestLanding, h4, p, label {
+//         font-size: 20px;
+//     };
+// };
